--- a/front/package.json
+++ b/front/package.json
@@ -3,15 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --experimental-https",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_ENV=production node server.js",
     "lint": "next lint"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.0",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
+    "dotenv": "^16.5.0",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -24,8 +25,12 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@vitejs/plugin-basic-ssl": "^2.0.0",
+    "devcert": "^1.2.2",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
+    "https-localhost": "^4.7.1",
+    "next-https": "^1.1.16",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
